# api_vitivinicultura

./: .env  .gitignore  Dockerfile  README.md  api_vitivinicultura.db  pyproject.toml
.cache/: cache.db
alembic/: env.py
alembic/versions/: 3030063ae8aa_create_usuarios_table.py  5d24a829c5c6_create_usuarios_table.py
src/api_vitivinicultura/: main.py  run.py
src/api_vitivinicultura/core/: config.py  database.py  security.py
src/api_vitivinicultura/crawlers/: base.py  vitivinicultura.py
src/api_vitivinicultura/exceptions/: handlers.py
src/api_vitivinicultura/models/: user.py  usuario.py
src/api_vitivinicultura/routers/: auth.py  users.py  vitivinicultura.py
src/api_vitivinicultura/schemas/: auth.py  error.py  user.py  vitivinicultura.py
src/api_vitivinicultura/services/: cache.py
