[project]
name = "api-vitivinicultura"
version = "0.1.0"
description = ""
authors = [
    {name = "VladmirCac",email = "vladmircarvalhoacoelho@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "python-jose[cryptography] (>=3.4.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "lxml (>=5.4.0,<6.0.0)",
]

[tool.poetry.scripts]
dev = "api_vitivinicultura.run:dev"

[tool.poetry]
packages = [{include = "api_vitivinicultura", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
